# gap_spi_com

./: README.md  requirements.txt  setup.sh
gap_spi_slave/: CMakeLists.txt  Makefile  SPI_master.py  multi_spi.c  multi_spi.h  sdk.config
